working ui -added change pwd and updated home screen

--- a/Programming 2/LoginFX/src/sample/Home.fxml
+++ b/Programming 2/LoginFX/src/sample/Home.fxml
@@ -11,5 +11,7 @@
             <Font size="36.0" />
          </font>
       </Label>
+      <Button fx:id="btnLogout" layoutX="284.0" layoutY="14.0" mnemonicParsing="false" onAction="#logout" text="Logout" />
+      <Button fx:id="btnChangePassword" layoutX="160.0" layoutY="14.0" mnemonicParsing="false" onAction="#changePassword" text="Change Password" />
    </children>
 </AnchorPane>
