--- a/Programming 2/LoginFX/src/sample/Register.fxml
+++ b/Programming 2/LoginFX/src/sample/Register.fxml
@@ -4,24 +4,22 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RegisterController">
+<AnchorPane prefHeight="400.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RegisterController">
    <Label layoutX="14.0" layoutY="14.0" text="Register">
       <font>
-         <Font size="36.0"/>
+         <Font size="36.0" />
       </font>
    </Label>
-   <Button fx:id="btnRegister" layoutX="49.0" layoutY="335.0" mnemonicParsing="false" onAction="#register"
-           text="Register"/>
-   <Button fx:id="btnCancel" layoutX="245.0" layoutY="335.0" mnemonicParsing="false" onAction="#cancel" text="Cancel"/>
-   <TextField layoutX="23.0" layoutY="94.0" prefHeight="25.0" prefWidth="305.0"/>
-   <TextField layoutX="23.0" layoutY="143.0" prefHeight="25.0" prefWidth="305.0"/>
-   <TextField layoutX="23.0" layoutY="188.0" prefHeight="25.0" prefWidth="305.0"/>
-   <TextField layoutX="23.0" layoutY="237.0" prefHeight="25.0" prefWidth="305.0"/>
-   <TextField layoutX="23.0" layoutY="290.0" prefHeight="25.0" prefWidth="305.0"/>
-   <Label layoutX="23.0" layoutY="77.0" text="Name"/>
-   <Label layoutX="23.0" layoutY="126.0" text="Username"/>
-   <Label layoutX="23.0" layoutY="168.0" text="Username"/>
-   <Label layoutX="23.0" layoutY="220.0" text="Password"/>
-   <Label layoutX="23.0" layoutY="273.0" text="Confirm Password"/>
+   <Button fx:id="btnRegister" layoutX="49.0" layoutY="335.0" mnemonicParsing="false" onAction="#register" text="Register" />
+   <Button fx:id="btnCancel" layoutX="245.0" layoutY="335.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
+   <TextField fx:id="txtName" layoutX="23.0" layoutY="94.0" prefHeight="25.0" prefWidth="305.0" />
+   <TextField fx:id="txtUsername" layoutX="23.0" layoutY="143.0" prefHeight="25.0" prefWidth="305.0" />
+   <TextField fx:id="txtEmail" layoutX="23.0" layoutY="188.0" prefHeight="25.0" prefWidth="305.0" />
+   <Label layoutX="23.0" layoutY="77.0" text="Name" />
+   <Label layoutX="22.0" layoutY="126.0" text="Username" />
+   <Label layoutX="25.0" layoutY="168.0" text="Email" />
+   <Label layoutX="23.0" layoutY="220.0" text="Password" />
+   <Label layoutX="23.0" layoutY="273.0" text="Confirm Password" />
+   <PasswordField fx:id="txtPwd" layoutX="23.0" layoutY="237.0" prefHeight="25.0" prefWidth="305.0" />
+   <PasswordField fx:id="txtCPwd" layoutX="23.0" layoutY="290.0" prefHeight="25.0" prefWidth="305.0" />
 </AnchorPane>
