--- a/Programming 2/LoginFX/src/sample/ForgotPwd.fxml
+++ b/Programming 2/LoginFX/src/sample/ForgotPwd.fxml
@@ -11,9 +11,10 @@
             <Font size="36.0" />
          </font>
       </Label>
-      <Label layoutX="22.0" layoutY="75.0" text="Email" />
-      <TextField fx:id="txtEmail" layoutX="22.0" layoutY="92.0" prefHeight="25.0" prefWidth="306.0" />
+      <Label layoutX="22.0" layoutY="59.0" text="Email" />
+      <TextField fx:id="txtEmail" layoutX="22.0" layoutY="80.0" prefHeight="25.0" prefWidth="306.0" />
       <Button fx:id="btnSend" layoutX="42.0" layoutY="145.0" mnemonicParsing="false" onAction="#send" text="Send" />
       <Button fx:id="btnCancel" layoutX="256.0" layoutY="145.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
+      <Label fx:id="lblError" layoutX="63.0" layoutY="117.0" prefHeight="17.0" prefWidth="231.0" textAlignment="CENTER" />
    </children>
 </AnchorPane>
